fix background on iphones

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -14,6 +14,17 @@ body {
   width: 100vw;
   overflow-x: hidden;
 
+  position: relative;
+}
+
+body::after {
+  content: "";
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+
   background-color: $background-color;
   background: linear-gradient(
     160deg,
@@ -21,9 +32,8 @@ body {
     $background-color-secondary 50%,
     $background-color-third 100%
   );
-  background-attachment: fixed;
-  background-size: auto 100vh;
-  background-size: auto 120lvh;
+  height: 100vh;
+  height: 120lvh;
 }
 
 * {
